--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/mcmuchenje/mikrotik-routeros#readme",
   "dependencies": {
+    "axios": "^0.21.1",
+    "body-parser": "^1.19.0",
     "engage-ui": "^1.148.0",
     "express": "^4.17.1",
     "passport": "^0.4.1"
